@@ -258,7 +258,9 @@
 		(setq contents
 		      (buffer-substring
 		       (search-forward "<div class=\"commentBody\">")
-		       (search-forward "</div>")))))))
+		       (progn
+			 (search-forward "<div class=\"commentSub\">")
+			 (match-beginning 0))))))))
       (search-failed (nnslashdot-lose why)))
 
     (when contents
