@@ -19,6 +19,10 @@
 
 	* org.texi (Setting tags): Typo fix.
 
+2006-09-14  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* gnus.texi (Oort Gnus): Add @xref for `mm-fill-flowed'.
+
 2006-09-12  Reiner Steib  <Reiner.Steib@gmx.de>
 
 	* files.texi (Visiting): Add index entry "open file".
@@ -41,6 +45,8 @@
 
 	* gnus.texi (Mail Source Specifiers): Mention problem of duplicate
 	mails with pop3-leave-mail-on-server.  Fix wording.
+	(Limiting): Improve gnus-summary-limit-to-articles.
+	(X-Face): Fix typo.
 
 2006-09-11  Simon Josefsson  <jas@extundo.com>
 
